[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amrrulesvalidator"
version = "1.0.0"
description = "Validator for AMRrules."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GNU General Public License v3.0"}
authors = [
    {name = "Jane Hawkey", email = "jane.hawkey@monash.edu"}
]
dependencies = [
    "obonet>=1.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.scripts]
amrrules = "amrrulesvalidator.cli:main"

[project.urls]
"Homepage" = "https://github.com/AMRverse/AMRrulesValidator"
"Bug Tracker" = "https://github.com/AMRverse/AMRrulesValidator/issues"

[tool.setuptools]
packages = ["amrrulesvalidator"]